--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     <title>Colby Whitehouse</title>
 </head>
 <body>
-    <img src="C:\Users\cwhit\Pictures\Camera Roll\IMG_6629.jpg">
     <h1>Colby Whitehouse</h1>
     <h2>My Portfolio</h2>
     <p><a href="https://github.com/cswhitehou">Github</a></p>
     <p><a href="https://www.linkedin.com/in/colby-whitehouse/">LinkedIn</a></p>
-    <a href="C:\School\Resume\C_Whitehouse Resume.pdf">Resume</a>
+    <a href="file:///C:/School/Resume/C_Whitehouse%20Resume.pdf">Resume</a>
 </body>
 </html>
