--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <h2>My Portfolio</h2>
     <p><a href="https://github.com/cswhitehou">Github</a></p>
     <p><a href="https://www.linkedin.com/in/colby-whitehouse/">LinkedIn</a></p>
-    <a href="file:///C:/School/Resume/C_Whitehouse%20Resume.pdf">Resume</a>
+    <p><a href="https://drive.google.com/file/d/1ZsMV3mAH-UfdgUkSVlXRtDqPn8O9HVtQ/view?usp=sharing">Resume</a></p>
 </body>
 </html>
