--- a/index.html
+++ b/index.html
@@ -14,5 +14,23 @@
     <p><a href="https://github.com/cswhitehou">Github</a></p>
     <p><a href="https://www.linkedin.com/in/colby-whitehouse/">LinkedIn</a></p>
     <p><a href="https://drive.google.com/file/d/1ZsMV3mAH-UfdgUkSVlXRtDqPn8O9HVtQ/view?usp=sharing">Resume</a></p>
+    <div>
+        <h2>Skills</h2>
+        <ul>
+            <li>Programming Languages: C, Python</li>
+            <li>Tools & Technologies: Git, Linux, Unix</li>
+        </ul>
+    </div>
+    <div>
+        <h2>Education</h2>
+        <p>Bachelor of Science in Computer Engineering</p>
+        <p>University of Notre Dame</p>
+        <p>GPA: 4.0</p>
+        <p>Expected Graduation: May 2026</p>
+    </div>
+    <div>
+        <h2>Personal Statement</h2>
+        <p>I am a passionate and motivated computer engineering student with a strong desire to learn and grow in the field of technology, especially in the areas of cybersecurity, AI, ML, and blockchain. Through my education and hands-on experience, I have developed a solid foundation in software development and am eager to apply my skills to real-world projects. I thrive in collaborative environments and am committed to delivering high-quality solutions that meet both user needs and business objectives. I am excited about the opportunity to contribute to innovative projects and make a meaningful impact in the tech industry.</p>
+    </div>
 </body>
 </html>
