--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div>
         <h2>Personal Statement</h2>
-        <p>I am a passionate and motivated computer engineering student with a strong desire to learn and grow in the field of technology, especially in the areas of cybersecurity, AI, ML, and blockchain. Through my education and hands-on experience, I have developed a solid foundation in software development and am eager to apply my skills to real-world projects. I thrive in collaborative environments and am committed to delivering high-quality solutions that meet both user needs and business objectives. I am excited about the opportunity to contribute to innovative projects and make a meaningful impact in the tech industry.</p>
+        <p>I am a passionate and motivated computer engineering student with a strong desire to learn and grow in the field of technology, especially in the areas of cybersecurity, AI, ML, and blockchain. Through my education and hands-on experience, I have developed a solid foundation in software development and am eager to apply my skills to real-world projects. I thrive in collaborative environments and am committed to delivering high-quality solutions that have a real impact in technology and the rest of the world. I am excited and looking for opportunities to enter into the industry and create innovative, high-end technology.</p>
     </div>
 </body>
 </html>
