--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div>
         <h2>Skills</h2>
         <ul>
-            <li>Programming Languages: C, Python</li>
-            <li>Tools & Technologies: Git, Linux, Unix</li>
+            <p>Programming Languages: C, Python</p>
+            <p>Tools & Technologies: Git, Linux, Unix</p>
         </ul>
     </div>
     <div>
