--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             margin-bottom: 10px;
         }
         a {
-            color: #007bff;
+            color: #007bfe;
             text-decoration: none;
         }
         a:hover {
