--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             z-index: 1000;
         }
         nav {
-            margin-bottom: 320px; /* Add space between nav and content */
+            margin-bottom: 20px; /* Add space between nav and content */
         }
         nav ul {
             list-style-type: none;
@@ -47,6 +47,7 @@
             border-radius: 4px;
         }
         .container {
+            padding-top: 200px;
             max-width: 800px;
             margin: 20px auto;
             padding: 0 20px;
