--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             margin: 20px auto;
             padding: 0 20px;
         }
+        html {
+            scroll-padding-top: 150px;
+        }
         h1, h2 {
             text-align: center;
             color: #333;
