--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             color: #fff;
             text-align: center;
             padding: 20px 0;
-            position: fixed;
+            position: sticky;
             width: 100%;
             top: 0;
             z-index: 1000;
