--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         
         <section id="contact">
             <h2>Contact Me</h2>
-            <form action="contact.php" method="POST">
+            <form action="https://formspree.io/f/xkgwqzne" method="POST">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
                 <label for="email">Email:</label>
